# F-Sharp-Full-Lexer

./: .gitignore  README.md  flake.nix  pyproject.toml
src/fsharp_full_lexer/: __init__.py  api.py  cli.py  compare.py  diagnostics.py  generate.py  keywords.py  lexer.py  lexfilter.py  literals.py  official_format.py  position.py  preprocessor.py  runtime.py  tokens.py
src/fslexpy/: __init__.py  ast.py  automata.py  cli.py  generator.py  parser.py  runtime.py
tests/: conftest.py  ident.fs  test_fslexpy.py  test_lexer.py
tests/fixtures/: core_module.fs  domain_model.fs  preprocessor.fs  script_workflow.fsx  strings_comments.fsx
tests/fixtures/manual_tests/: a11.fs  a12.fs  a13.fs  a14.fs  a15.fs  a16.fs  a17.fs  a18.fs  a19.fs  a20.fs  a21.fs  a22.fs  a23.fs  a24.fs  a25.fs  a26.fs  ai1.fs  ai10.fs  ai2.fs  ai3.fs  ai4.fs  ai5.fs  ai6.fs  ai7.fs  ai9.fs  fault1.fs  fault2.fs  fault3.fs  ident.fs  ident1.fs  ident2.fs  program.fs  test_complete_lexer.fs
tools/: test_fs_fixtures.py
tools/OfficialTokenizer/: OfficialTokenizer.fsproj  Program.fs
